--- a/index.html
+++ b/index.html
@@ -13,15 +13,15 @@
 <section class="container-fluid">
     <section class="content">
         <section class="col-12">
-            <div class="header d-flex align-items-center justify-content-start bg-dark p-5">
+            <div class="header d-flex align-items-center justify-content-between bg-dark p-5">
                 <!--                    My Initials and Image-->
-                <div class="d-flex justify-content-start mr-5">
+                <div class="d-flex justify-content-start">
                     <div class="initials align-self-center mr-1">KF</div>
                     <div><img src="images/KavehPhoto.jpg" alt="kavehPhoto" class="rounded-circle" width="100px"
                               height="100px"></div>
                 </div>
                 <!--                    Title-->
-                <div class="text-white">
+                <div class="text-white text">
                     <h3>My PortFolio</h3>
                 </div>
                 <!--                    Toggle Menu-->
