--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
                 <div class="list-group main-list">
                     <a href="index.html" class="list-group-item list-group-item-action">Home <i class="fas fa-caret-right"></i></a>
                     <a href="#" class="list-group-item list-group-item-action">Education <i class="fas fa-caret-right"></i></a>
-                    <a href="#" class="list-group-item list-group-item-action">Projects <i class="fas fa-caret-right"></i></a>
-                    <a href="#" class="list-group-item list-group-item-action">Hobbies <i class="fas fa-caret-right"></i></a>
+                    <a href="projects.html" class="list-group-item list-group-item-action">Projects <i class="fas fa-caret-right"></i></a>
+                    <a href="hobbies.html" class="list-group-item list-group-item-action">Hobbies <i class="fas fa-caret-right"></i></a>
                     <a href="gallery.html" class="list-group-item list-group-item-action">Gallery <i class="fas fa-caret-right"></i></a>
                 </div>
             </div>
