--- a/projects.html
+++ b/projects.html
@@ -6,7 +6,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="slider/engine1/style.css">
-    <link rel="stylesheet" href="lightbox/dist/css/lumos.css">
+
     <!--    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">-->
     <link rel="stylesheet" href="index.css">
     <link rel="stylesheet" href="menu.css">
@@ -61,104 +61,28 @@
 </section>
 <section class="container-fluid">
     <!--        Main menu-->
-    <section class="row mt-1" style="height: 360px;overflow: auto">
+    <section class="row mt-1">
         <section class="col-3 pr-1">
             <div class="bg-primary p-2 menu">
                 <h2 class="text-dark">Menu</h2>
                 <hr class="menu-underline mr-auto">
                 <div class="list-group main-list">
-                    <a href="index.html" class="list-group-item list-group-item-action">Home <i
-                            class="fas fa-caret-right"></i></a>
-                    <a href="#" class="list-group-item list-group-item-action">Education <i
-                            class="fas fa-caret-right"></i></a>
-                    <a href="projects.html" class="list-group-item list-group-item-action">Projects <i
-                            class="fas fa-caret-right"></i></a>
-                    <a href="hobbies.html" class="list-group-item list-group-item-action">Hobbies <i
-                            class="fas fa-caret-right"></i></a>
-                    <a href="#" class="list-group-item list-group-item-action">Gallery <i
-                            class="fas fa-caret-right"></i></a>
+                    <a href="index.html" class="list-group-item list-group-item-action">Home <i class="fas fa-caret-right"></i></a>
+                    <a href="#" class="list-group-item list-group-item-action">Education <i class="fas fa-caret-right"></i></a>
+                    <a href="projects.html" class="list-group-item list-group-item-action">Projects <i class="fas fa-caret-right"></i></a>
+                    <a href="hobbies.html" class="list-group-item list-group-item-action">Hobbies <i class="fas fa-caret-right"></i></a>
+                    <a href="gallery.html" class="list-group-item list-group-item-action">Gallery <i class="fas fa-caret-right"></i></a>
                 </div>
             </div>
         </section>
         <section class="col-9 pl-0">
-            <section class="row mr-0 ml-0">
-
-<!--                <section class="gallery">-->
-                    <section class="col-3">
-
-                        <a class="lumos-link" data-lumos="gallery1" href="lightbox/demo/img/img1-1.jpg">
-                            <img src="lightbox/demo/img/img1.jpg" class="img-fluid">
-                        </a>
-
-                    </section>
-                    <section class="col-3">
-
-                        <a class="lumos-link" data-lumos="gallery1" href="lightbox/demo/img/img2-2.jpg">
-                            <img src="lightbox/demo/img/img2.jpg" class="img-fluid">
-                        </a>
-
-                    </section>
-                    <section class="col-3">
-
-                        <a class="lumos-link" data-lumos="gallery1" href="lightbox/demo/img/img3-3.jpg">
-                            <img src="lightbox/demo/img/img3.jpg" class="img-fluid">
-                        </a>
-
-                    </section>
-                <section class="col-3">
-
-                    <a class="lumos-link" data-lumos="gallery1" href="lightbox/demo/img/img4-4.jpg">
-                        <img src="lightbox/demo/img/img4.jpg" class="img-fluid">
-                    </a>
-
-                </section>
-
-
-
-                <!--                end gallery-->
-
+            <section class="hobbies text-center">
+                <!--                hobby section-->
+                <p class="hobby-header">Hobbies</p>
+                <hr class="hobby-underline">
+                <p class="hobby">My hobbies include playing guitar, swimming and walking</p>
+                <!--                end hobby section-->
             </section>
-
-        </section>
-        <section class="col-9 pl-0 offset-3 pics">
-            <section class="row mr-0 ml-0">
-
-                <!--                <section class="gallery">-->
-                <section class="col-3">
-
-                    <a class="lumos-link" data-lumos="gallery1" href="lightbox/demo/img/img5-5.jpg">
-                        <img src="lightbox/demo/img/img5.jpg" class="img-fluid">
-                    </a>
-
-                </section>
-                <section class="col-3">
-
-                    <a class="lumos-link" data-lumos="gallery1" href="lightbox/demo/img/img6-6.jpg">
-                        <img src="lightbox/demo/img/img6.jpg" class="img-fluid">
-                    </a>
-
-                </section>
-                <section class="col-3">
-
-                    <a class="lumos-link" data-lumos="gallery1" href="lightbox/demo/img/img7-7.jpg">
-                        <img src="lightbox/demo/img/img7.jpg" class="img-fluid">
-                    </a>
-
-                </section>
-                <section class="col-3">
-
-                    <a class="lumos-link" data-lumos="gallery1" href="lightbox/demo/img/img8-8.jpg">
-                        <img src="lightbox/demo/img/img8.jpg" class="img-fluid">
-                    </a>
-
-                </section>
-
-
-
-                <!--                end gallery-->
-
-            </section>
-
         </section>
 
     </section>
@@ -168,7 +92,7 @@
             <div class="jumbotron bg-secondary mt-2 socket" style="height:300px;">
                 <hr>
                 <span class="skt-ft">Made By:</span>
-               <span class="mt-3 skt">Kaveh Frounchi</span>
+                <span class="mt-3 skt">Kaveh Frounchi</span>
             </div>
         </footer>
     </section>
@@ -180,7 +104,6 @@
 <script src="dist/js/bootstrap.min.js"></script>
 <script type="text/javascript" src="slider/engine1/wowslider.js"></script>
 <script type="text/javascript" src="slider/engine1/script.js"></script>
-<script src="lightbox/dist/js/lumos-min.js"></script>
 <!-- Font Awesome-->
 <script src="https://use.fontawesome.com/releases/v5.5.0/js/all.js"></script>
 
@@ -191,12 +114,11 @@
         document.querySelector(".border").classList.toggle("inner-transition");
     }
 
-    function welcomeInfo() {
+    function welcomeInfo(){
         document.querySelector('#headline').className = 'state2';
         document.querySelector('#headline').addEventListener('transitionend', endTransition);
     }
-
-    function endTransition() {
+    function endTransition(){
         document.querySelector('#headline').className = 'state1';
     }
 </script>
