finished project section

--- a/projects.html
+++ b/projects.html
@@ -76,12 +76,36 @@
             </div>
         </section>
         <section class="col-9 pl-0">
-            <section class="hobbies text-center">
-                <!--                hobby section-->
-                <p class="hobby-header">Hobbies</p>
-                <hr class="hobby-underline">
-                <p class="hobby">My hobbies include playing guitar, swimming and walking</p>
-                <!--                end hobby section-->
+            <section class="projects text-center">
+                <!--                projects section-->
+                <p class="project-header">Projects</p>
+                <hr class="project-underline mb-2">
+
+                    <ol class="text-left">
+                        <li>
+                            <dl>
+                                <dt><a href="https://github.com/kaveh163/Nodejs-Project">Nodejs authentication</a></dt>
+                                <dd>Made authentication and validation for registering and login process</dd>
+                            </dl>
+                        </li>
+                        <li>
+                            <dl>
+                                <dt><a href="https://github.com/kaveh163/blogPost">laravel Blog Post</a></dt>
+                                <dd>Made laravel blog for commenting based on different topics</dd>
+                            </dl>
+                        </li>
+                        <li>
+                            <dl>
+                                <dt><a href="https://github.com/kaveh163/laravelFinalProject">Laravel admin project</a></dt>
+                                <dd>Made a site with the control of administrator and dynamcially updating the site</dd>
+                            </dl>
+                        </li>
+
+                    </ol>
+
+
+
+                <!--                end projects section-->
             </section>
         </section>
 
