--- a/education.html
+++ b/education.html
@@ -61,14 +61,14 @@
 </section>
 <section class="container-fluid">
     <!--        Main menu-->
-    <section class="row mt-1">
+    <section class="row mt-1" style="height: 360px;overflow: auto">
         <section class="col-3 pr-1">
             <div class="bg-primary p-2 menu">
                 <h2 class="text-dark">Menu</h2>
                 <hr class="menu-underline mr-auto">
                 <div class="list-group main-list">
                     <a href="index.html" class="list-group-item list-group-item-action">Home <i class="fas fa-caret-right"></i></a>
-                    <a href="education.html" class="list-group-item list-group-item-action">Education <i class="fas fa-caret-right"></i></a>
+                    <a href="#" class="list-group-item list-group-item-action">Education <i class="fas fa-caret-right"></i></a>
                     <a href="projects.html" class="list-group-item list-group-item-action">Projects <i class="fas fa-caret-right"></i></a>
                     <a href="hobbies.html" class="list-group-item list-group-item-action">Hobbies <i class="fas fa-caret-right"></i></a>
                     <a href="gallery.html" class="list-group-item list-group-item-action">Gallery <i class="fas fa-caret-right"></i></a>
@@ -76,36 +76,44 @@
             </div>
         </section>
         <section class="col-9 pl-0">
-            <section class="projects text-center">
-                <!--                projects section-->
-                <p class="project-header">Projects</p>
-                <hr class="project-underline mb-2">
+            <section class="education text-center">
+                <!--                education section-->
+                <p class="education-header">Education</p>
+                <hr class="education-underline mb-2">
+                <section class="text-left">
+                    <div class="master">
+                        <p class="master-title"><strong>Master of Applied Science in Environmental Engineering, Azad University, Science and Research branch, Tehran, Iran</strong><span class="date">2014-2018</span></p>
+                        <ul>
+                            <li><strong>Thesis: </strong>Evaluation of NO2 and CO concentration in low and high traffic highways with Caline 4 model.</li>
+                            <li>Achieved a GPA of A<sup>+</sup></li>
+                            <li>Compared the predicted  NO2 and CO concentrations by Caline 4 with the measured values in both highways</li>
+                            <li>Found and plotted the prevailing wind direction in Tehran by using WRPLOT</li>
+                            <li>Evaluated the role of slope in Yadegar-Emam highway on NO2 and CO concentrations, with different vehicle speeds, by using Caline 4</li>
+                            <li>Evaluated the role of vehicle air conditioning on NO2 and CO concentrations, with different vehicle speeds, by using Caline 4</li>
+                        </ul>
+                    </div>
+                    <div class="bachelor">
+                        <p class="bachelor-title"><strong>Bachelor of Chemical Engineering, Sharif University, Tehran, Iran</strong><span class="bachelor-date">2007-2011</span></p>
+                        <ul>
+                            <li><strong>Final project: </strong>Plastic Recycling (Thermal degradation of waste plastics into fuel oils)  </li>
+                        </ul>
+                    </div>
+                    <div class="computer">
+                        <p class="computer-title"><strong>Computer Engineering, Carleton University,Ottawa, Canada</strong><span class="computer-date">2004-2006</span></p>
+                        <ul>
+                            <li>
+                                Passed general engineering courses including mathematics, computer science, physics and chemistry
+                            </li>
+                        </ul>
+                    </div>
 
-                    <ol class="text-left">
-                        <li>
-                            <dl>
-                                <dt><a href="https://github.com/kaveh163/Nodejs-Project">Nodejs authentication</a></dt>
-                                <dd>Made authentication and validation for registering and login process</dd>
-                            </dl>
-                        </li>
-                        <li>
-                            <dl>
-                                <dt><a href="https://github.com/kaveh163/blogPost">laravel Blog Post</a></dt>
-                                <dd>Made laravel blog for commenting based on different topics</dd>
-                            </dl>
-                        </li>
-                        <li>
-                            <dl>
-                                <dt><a href="https://github.com/kaveh163/laravelFinalProject">Laravel admin project</a></dt>
-                                <dd>Made a site with the control of administrator and dynamcially updating the site</dd>
-                            </dl>
-                        </li>
 
-                    </ol>
+                </section>
 
 
 
-                <!--                end projects section-->
+
+                <!--                end education section-->
             </section>
         </section>
 
