--- a/hobbies.html
+++ b/hobbies.html
@@ -13,7 +13,7 @@
 </head>
 <body onload="welcomeInfo()">
 <section class="container-fluid">
-    <div class="bg-danger">
+    <div class="homepage-title">
         <p id='headline' class="text-capitalize state1">welcome to my homepage</p>
     </div>
     <!--    Header section-->
@@ -28,7 +28,7 @@
                 </div>
                 <!--                    Title-->
                 <div class="text-white text">
-                    <h3>My PortFolio</h3>
+                    <h3>My Portfolio</h3>
                 </div>
                 <!--                    Toggle Menu-->
                 <div>
@@ -68,7 +68,7 @@
                 <hr class="menu-underline mr-auto">
                 <div class="list-group main-list">
                     <a href="index.html" class="list-group-item list-group-item-action">Home <i class="fas fa-caret-right"></i></a>
-                    <a href="#" class="list-group-item list-group-item-action">Education <i class="fas fa-caret-right"></i></a>
+                    <a href="education.html" class="list-group-item list-group-item-action">Education <i class="fas fa-caret-right"></i></a>
                     <a href="projects.html" class="list-group-item list-group-item-action">Projects <i class="fas fa-caret-right"></i></a>
                     <a href="hobbies.html" class="list-group-item list-group-item-action">Hobbies <i class="fas fa-caret-right"></i></a>
                     <a href="gallery.html" class="list-group-item list-group-item-action">Gallery <i class="fas fa-caret-right"></i></a>
@@ -80,7 +80,12 @@
                 <!--                hobby section-->
                 <p class="hobby-header">Hobbies</p>
                 <hr class="hobby-underline">
-                <p class="hobby">My hobbies include playing guitar, swimming and walking</p>
+<!--                <p class="hobby">My hobbies include playing guitar, swimming and walking</p>-->
+                <ul class="hobby text-left">
+                    <li>Playing guitar</li>
+                    <li>Swimming</li>
+                    <li>Walking</li>
+                </ul>
                 <!--                end hobby section-->
             </section>
         </section>
@@ -93,6 +98,7 @@
                 <hr>
                 <span class="skt-ft">Made By:</span>
                 <span class="mt-3 skt">Kaveh Frounchi</span>
+                <p class="mt-1"><i>Email: kavehfrounchi@gmail.com</i></p>
             </div>
         </footer>
     </section>
