--- a/education.html
+++ b/education.html
@@ -63,7 +63,7 @@
     <!--        Main menu-->
     <section class="row mt-1" style="height: 360px;overflow: auto">
         <section class="col-3 pr-1">
-            <div class="bg-primary p-2 menu">
+            <div class="p-2 menu">
                 <h2 class="text-dark">Menu</h2>
                 <hr class="menu-underline mr-auto">
                 <div class="list-group main-list">
