--- a/projects.html
+++ b/projects.html
@@ -63,13 +63,13 @@
     <!--        Main menu-->
     <section class="row mt-1">
         <section class="col-3 pr-1">
-            <div class="bg-primary p-2 menu">
+            <div class="p-2 menu">
                 <h2 class="text-dark">Menu</h2>
                 <hr class="menu-underline mr-auto">
                 <div class="list-group main-list">
                     <a href="index.html" class="list-group-item list-group-item-action">Home <i class="fas fa-caret-right"></i></a>
                     <a href="education.html" class="list-group-item list-group-item-action">Education <i class="fas fa-caret-right"></i></a>
-                    <a href="projects.html" class="list-group-item list-group-item-action">Projects <i class="fas fa-caret-right"></i></a>
+                    <a href="#" class="list-group-item list-group-item-action">Projects <i class="fas fa-caret-right"></i></a>
                     <a href="hobbies.html" class="list-group-item list-group-item-action">Hobbies <i class="fas fa-caret-right"></i></a>
                     <a href="gallery.html" class="list-group-item list-group-item-action">Gallery <i class="fas fa-caret-right"></i></a>
                 </div>
